# oxytrouille

./: Cargo.toml  readme.md  save.json
.github/workflows/: ci.yml
src/: album.rs  bot.rs  main.rs  mongo.rs
src/bot/: command.rs  mod.rs
