[package]
edition = "2021"
name    = "oxytrouille"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow                  = "1.0"
ctrlc                   = { version = "3.0", features = ["termination"] }
futures                 = "0.3.25"
multimap                = "0.8.3"
rand                    = "0.8.5"
ron                     = "0.8.0"
serde                   = "1.0.147"
serde_json              = "1.0.87"
tokio                   = { version = "1", features = ["full"] }
twilight-cache-inmemory = "0.13.0"
twilight-gateway        = "0.13.3"
twilight-http           = "0.13.2"
twilight-model          = "0.13.5"
reqwest = { version = "0.11.12", features = ["json"] }

[dependencies.mongodb]
default-features = false
features         = ["tokio-runtime"]
version          = "2.3.1"
