[package]
edition = "2021"
name = "oxytrouille"
version = "0.1.1"

[profile.release]
lto = true
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
ctrlc = { version = "3.0", features = ["termination"] }
deunicode = "1.3.2"
futures = "0.3.25"
multimap = "0.8.3"
rand = "0.8.5"
# reqwest                 = { version = "0.11.12", features = ["json"] }
serde = "1.0.147"
serde_json = "1.0.87"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["tracing"] }
twilight-cache-inmemory = "0.15.4"
twilight-gateway = "0.15.4"
twilight-http = "0.15.4"
twilight-model = "0.15.4"

# [dependencies.mongodb]
# default-features = false
# features         = ["tokio-runtime"]
# version          = "2.3.1"